--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@prisma/client": "^5.22.0",
     "next": "15.0.3",
+    "prisma": "^5.22.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "validator": "^13.12.0",
