--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@prisma/client": "^5.22.0",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
+    "iron-session": "^8.0.4",
     "next": "15.0.3",
     "prisma": "^5.22.0",
     "react": "^18.3.1",
